[gd_scene load_steps=10 format=3 uid="uid://bflnfy31fb7gf"]

[ext_resource type="Script" uid="uid://cg4mbvbm3ymuv" path="res://weapons/gun_mortar.gd" id="1_0kv2k"]

[sub_resource type="CylinderMesh" id="CylinderMesh_dkscp"]
top_radius = 0.11
bottom_radius = 0.11
height = 0.22

[sub_resource type="CylinderMesh" id="CylinderMesh_mcssg"]
top_radius = 0.07
bottom_radius = 0.07
height = 0.6

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0kv2k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dvn3b"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j12u2"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(1, 0, 0, 1)
corner_detail = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dvn3b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n1mph"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mqv77"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(1, 1, 1, 1)
corner_detail = 1

[node name="GunMortar" type="Node3D" groups=["gun_has_ui"]]
script = ExtResource("1_0kv2k")

[node name="FiringTimer" type="Timer" parent="."]

[node name="RangeTimer" type="Timer" parent="."]
wait_time = 0.35
one_shot = true

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.0434325, 0, 0)
visible = false
mesh = SubResource("CylinderMesh_dkscp")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.182329, 0, 0)
visible = false
mesh = SubResource("CylinderMesh_mcssg")

[node name="AmmoTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Hud" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AmmoPipsExtra" type="Control" parent="Hud"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Pip1B" type="ColorRect" parent="Hud/AmmoPipsExtra"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -359.72
offset_top = -192.65
offset_right = -319.72
offset_bottom = -152.65
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 0.0273438, 1)

[node name="Pip2B" type="ColorRect" parent="Hud/AmmoPipsExtra"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -359.72
offset_top = -124.37
offset_right = -319.72
offset_bottom = -84.37
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 0.0273438, 1)

[node name="MortarPitchIndicator" type="Control" parent="Hud"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
rotation = -0.000920953

[node name="TopFill1" type="ProgressBar" parent="Hud/MortarPitchIndicator"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -2.0
offset_right = -88.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
rotation = -1.57079
theme_override_styles/background = SubResource("StyleBoxEmpty_0kv2k")
theme_override_styles/fill = SubResource("StyleBoxFlat_dvn3b")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="Scale" type="ProgressBar" parent="Hud/MortarPitchIndicator/TopFill1"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -192.0
offset_top = -4.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_j12u2")
show_percentage = false

[node name="TopFill2" type="ProgressBar" parent="Hud/MortarPitchIndicator"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 256.0
offset_top = -2.0
offset_right = 448.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
rotation = -1.57072
theme_override_styles/background = SubResource("StyleBoxEmpty_0kv2k")
theme_override_styles/fill = SubResource("StyleBoxFlat_dvn3b")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="Scale" type="ProgressBar" parent="Hud/MortarPitchIndicator/TopFill2"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -192.0
offset_top = -24.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_j12u2")
show_percentage = false

[node name="Lower" type="Control" parent="Hud/MortarPitchIndicator"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
rotation = -3.14159

[node name="LowFill1" type="ProgressBar" parent="Hud/MortarPitchIndicator/Lower"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -2.0
offset_right = -88.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
rotation = -1.57079
theme_override_styles/background = SubResource("StyleBoxEmpty_0kv2k")
theme_override_styles/fill = SubResource("StyleBoxFlat_dvn3b")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="Scale" type="ProgressBar" parent="Hud/MortarPitchIndicator/Lower/LowFill1"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -192.0
offset_top = -4.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_j12u2")
show_percentage = false

[node name="LowFill2" type="ProgressBar" parent="Hud/MortarPitchIndicator/Lower"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 256.0
offset_top = -2.0
offset_right = 448.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
rotation = -1.57072
theme_override_styles/background = SubResource("StyleBoxEmpty_0kv2k")
theme_override_styles/fill = SubResource("StyleBoxFlat_dvn3b")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="Scale" type="ProgressBar" parent="Hud/MortarPitchIndicator/Lower/LowFill2"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -192.0
offset_top = -24.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_j12u2")
show_percentage = false

[node name="AmmoPips" type="Control" parent="Hud"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0

[node name="Pip1" type="ColorRect" parent="Hud/AmmoPips"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -104.0
offset_top = -160.0
offset_right = -64.0
offset_bottom = -120.0
grow_horizontal = 0
grow_vertical = 0
color = Color(0, 1, 0.0273438, 1)

[node name="Pip2" type="ColorRect" parent="Hud/AmmoPips"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -176.0
offset_top = -160.0
offset_right = -136.0
offset_bottom = -120.0
grow_horizontal = 0
grow_vertical = 0
color = Color(0, 1, 0.0273438, 1)

[node name="RangeIndicator" type="Control" parent="Hud"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="RangeMeter" type="ProgressBar" parent="Hud/RangeIndicator"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -243.035
offset_top = 191.0
offset_right = 142.965
offset_bottom = 209.0
grow_horizontal = 2
grow_vertical = 2
rotation = -1.57079
theme_override_styles/background = SubResource("StyleBoxEmpty_dvn3b")
theme_override_styles/fill = SubResource("StyleBoxFlat_n1mph")
max_value = 1.0
show_percentage = false

[node name="Scale" type="ProgressBar" parent="Hud/RangeIndicator/RangeMeter"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -386.0
offset_top = -4.0
offset_right = -6.10352e-05
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_mqv77")
max_value = 1.0
show_percentage = false

[node name="RangeMeter2" type="ProgressBar" parent="Hud/RangeIndicator"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 225.035
offset_top = 191.0
offset_right = 611.035
offset_bottom = 209.0
grow_horizontal = 2
grow_vertical = 2
rotation = -1.57079
theme_override_styles/background = SubResource("StyleBoxEmpty_dvn3b")
theme_override_styles/fill = SubResource("StyleBoxFlat_n1mph")
max_value = 1.0
show_percentage = false

[node name="Scale" type="ProgressBar" parent="Hud/RangeIndicator/RangeMeter2"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -386.0
offset_top = -18.0
offset_right = -6.10352e-05
offset_bottom = -14.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_mqv77")
max_value = 1.0
show_percentage = false

[connection signal="timeout" from="FiringTimer" to="." method="fire"]
[connection signal="timeout" from="AmmoTimer" to="." method="_on_ammo_timer_timeout"]
